--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
