--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-NODE_ENV=development
-PORT=
-USER_SECRET=MBajskdlfNMfaisdjf
+APP_PORT=8080
+PG_DATABASE=backend-sc-example
+PG_USER=abimanyu
+PG_PASSWORD=
+PG_HOST=localhost
+PG_PORT=5432
