--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
-PG_DATABASE=backend-sc-example
-PG_USER=abimanyu
+PG_DATABASE=
+PG_USER=
 PG_PASSWORD=
-PG_HOST=localhost
-PG_PORT=5432
+PG_HOST=
+PG_PORT=
