--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8080
-PG_DATABASE=
-PG_USER=
-PG_PASSWORD=
-PG_HOST=
-PG_PORT=
+PG_DATABASE= dbGame
+PG_USER= postgres
+PG_PASSWORD= 12345
+PG_HOST= localhost
+PG_PORT= 5432
