--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=8080
-PG_DATABASE= dbGame
-PG_USER= postgres
-PG_PASSWORD= 12345
-PG_HOST= localhost
-PG_PORT= 5432
-TOKEN_SECRET = zxcnwrqogmaporwmj
+PORT=
+PG_DATABASE=
+PG_USER=
+PG_PASSWORD=
+PG_HOST=
+PG_PORT=
+TOKEN_SECRET =
