--- a/.env-development
+++ b/.env-development
@@ -2,10 +2,10 @@ PORT=3000
 
 # Database Config
 DB_HOST=localhost
-DB_PORT=3307
-DB_USER=root
+DB_PORT=
+DB_USER=
 DB_PASSWORD=
-DB_NAME=fp_be
+DB_NAME=
 
 
 #env token USER
