--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3"
+    "mysql2": "^3.4.0",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
